fix line breaks in medium & narrow intro page 1
line breaks were introduced for large screens; set to display: none
to remove line breaks on more narrow screens.

--- a/msgDApp/src/intro.css
+++ b/msgDApp/src/intro.css
@@ -524,6 +524,9 @@
 	transform-style: preserve-3d;
 	transform: translate3d(0px, -51px, 0px);
     }
+    #br-intro1-large, #br-intro1-large-med {
+	display: none;
+    }
     .para1-intro2 {
         text-align: justify;
         font-size: 12px;
@@ -910,6 +913,9 @@
 	font-size: 14px;
 	transform-style: preserve-3d;
 	transform: translate3d(201px, -11px, 0px);
+    }
+    #br-intro1-large {
+	display: none;
     }
     .note-text-intro1 {
         font-size: 14px;
